RESOLVED FIXED71588
When CSP blocks mixed content, we shouldn't also warn about mixed content
https://bugs.webkit.org/show_bug.cgi?id=71588
Summary When CSP blocks mixed content, we shouldn't also warn about mixed content
Adam Barth
Reported 2011-11-04 14:10:23 PDT
When CSP blocks mixed content, we shouldn't also warn about mixed content
Attachments
Patch (5.57 KB, patch)
2011-11-04 14:12 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2011-11-04 14:12:28 PDT
Eric Seidel (no email)
Comment 2 2011-11-04 14:23:03 PDT
Comment on attachment 113711 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=113711&action=review LGTM. > Source/WebCore/loader/cache/CachedResourceLoader.cpp:306 > switch (type) { This switch really should be a helper function. Another patch, of course.
WebKit Review Bot
Comment 3 2011-11-04 15:32:30 PDT
Comment on attachment 113711 [details] Patch Clearing flags on attachment: 113711 Committed r99329: <http://trac.webkit.org/changeset/99329>
WebKit Review Bot
Comment 4 2011-11-04 15:32:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.