When CSP blocks mixed content, we shouldn't also warn about mixed content https://bugs.webkit.org/show_bug.cgi?id=71588

Reviewed by Eric Seidel.

Source/WebCore:

Getting both warnings confused some early adopters.  They thought the
insecure loads were happening even though they blocked them with CSP.
This patch restricts the mixed content warnings to show only when the
load isn't already blocked by CSP or by the embedder.

Test: http/tests/security/contentSecurityPolicy/block-mixed-content-hides-warning.html

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::canRequest):

LayoutTests:

These tests check what kinds of warnings we generate when blocking insecure scripts with CSP.

* http/tests/security/contentSecurityPolicy/block-mixed-content-hides-warning-expected.txt: Added.
* http/tests/security/contentSecurityPolicy/block-mixed-content-hides-warning.html: Added.
* http/tests/security/contentSecurityPolicy/resources/alert-fail.js: Added.
* http/tests/security/contentSecurityPolicy/resources/mixed-content-with-csp.html: Added.


Canonical link: https://commits.webkit.org/87916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99329 268f45cc-cd09-0410-ab3c-d52691b4dbfc